still wip, fix appTop html-validate errors

--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -19,9 +19,9 @@
                     const footerSection=pr.footerSections[sectionIndex];-%>
                     <%_ if (footerSection.customFooterLinks != null) { -%>
                         <%_ if (sectionIndex < 3) { -%>
-                            <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-footerSectionLinks">
+                            <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="<%= footerSection.sectionName %>">
                                 <%_ if (footerSection.sectionName != null) { -%>
-                                    <h3 id="cdts-footerSectionLinks"><%= footerSection.sectionName %></h3>
+                                    <h3 id="<%= footerSection.sectionName %>"><%= footerSection.sectionName %></h3>
                                 <%_ } -%>
                                 <ul class="list-unstyled">
                                     <%_ for (var linkIndex=0; linkIndex<footerSection.customFooterLinks.length; linkIndex++) {
@@ -32,9 +32,9 @@
                             </section>
                         <%_ } -%>
                     <%_ } else if (sectionIndex == 0) { /*For backward compatibility */ -%>
-                        <section class="col-md-3 col-sm-6 col-lg-3">
+                        <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="<%= footerSection.sectionName %>">
                             <%_ if (footerSection.sectionName != null) { -%>
-                                <h3><%= footerSection.sectionName %></h3>
+                                <h3 id="<%= footerSection.sectionName %>"><%= footerSection.sectionName %></h3>
                             <%_ } -%>
                             <ul class="list-unstyled">
                                 <%_ for (var linkIndex=0; linkIndex<pr.footerSections.length; linkIndex++) {
@@ -46,8 +46,8 @@
                     <%_ } -%>
                 <%_ } -%>
                 <%_ if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
-                    <section class="col-md-3 col-sm-6 col-lg-3">
-                        <h3><^- msg('Corporate') ^></h3>
+                    <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-customSection3">
+                        <h3 id="cdts-customSection3"><^- msg('Corporate') ^></h3>
                         <ul class="list-unstyled">
                             <li><a href="<^- msg('https://esdc.prv/en/branches_regions/index.shtml') ^>"><^- msg('ESDC/SC Intranet') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/news/index.shtml') ^>"><^- msg('News') ^></a></li>
