--- a/src/gcintranet/refFooter.ejs
+++ b/src/gcintranet/refFooter.ejs
@@ -26,7 +26,7 @@
 <%_ if (pr.exitSecureSite != null) { -%>
     <%_ if (pr.exitSecureSite.exitScript == true) { -%>
         <%# This is a placeholder link to trigger the WET exitscript intialization in the event the no external link is present on the page -%>
-        <a href="#" id="cdts-exitscript-placeholder-link" aria-hidden="true" class="wb-exitscript cdts-hidden">Exit Link</a>
+        <a href="#" id="cdts-exitscript-placeholder-link" hidden class="wb-exitscript cdts-hidden">Exit Link</a>
         <%# When is "setup" mode, we avoid inserting an inline script element to support clients who wnat to use Content-Security-Policy -%>
         <%_ if (wet.utilities.isCDTSSetupMode()) {
             wet.utilities.addSetupCompletitionListener(function() {
@@ -38,7 +38,7 @@
     <%_ } -%>
 <%_ } else if (pr.exitScript == true) { -%>
     <%# This is only for backwards compatibility where a user implements exitscript using parameters instead of an object. -%>
-    <a href="#" id="cdts-exitscript-placeholder-link" style="display: none" aria-hidden="true" class="wb-exitscript">Exit Link</a>
+    <a href="#" id="cdts-exitscript-placeholder-link" style="display: none" hidden class="wb-exitscript">Exit Link</a>
     <script data-id="exitScript">wet.utilities.cdtsApplyExitScriptToLinks("<%=pr.displayModal != null? pr.displayModal: 'undefined'%>", "<%-pr.exitURL != null? pr.exitURL: 'undefined'%>", "<%=pr.exitDomains != null? pr.exitDomains: 'undefined'%>", "<%=pr.exitMsg != null? pr.exitMsg: 'undefined'%>", "<%=pr.yesMsg != null? pr.yesMsg: 'undefined'%>", "<%=pr.cancelMsg != null? pr.cancelMsg: 'undefined'%>", "<%=pr.msgBoxHeader != null? pr.msgBoxHeader: 'undefined'%>", "<%=pr.targetWarning != null? pr.targetWarning: 'undefined'%>", "<%=pr.displayModalForNewWindow != null? pr.displayModalForNewWindow: 'undefined'%>");</script>
 <%_ } -%>
 <%_ if (pr.webAnalytics != null && pr.webAnalytics != false && !wet.utilities.isCDTSSetupMode()) { -%>
