--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -19,9 +19,11 @@
                     const footerSection=pr.footerSections[sectionIndex];-%>
                     <%_ if (footerSection.customFooterLinks != null) { -%>
                         <%_ if (sectionIndex < 3) { -%>
-                            <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="<%= (footerSection.sectionName).replaceAll(/\s/g,'') %>">
                                 <%_ if (footerSection.sectionName != null) { -%>
-                                    <h3 id="<%= (footerSection.sectionName).replaceAll(/\s/g,'') %>"><%= footerSection.sectionName %></h3>
+                                    <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-footerSection<%= sectionIndex %>">
+                                    <h3 id="cdts-footerSection<%= sectionIndex %>"><%= footerSection.sectionName %></h3>
+                                <%_ } else { -%>
+                                    <section class="col-md-3 col-sm-6 col-lg-3" aria-label="<^- msg('Footer') ^>">
                                 <%_ } -%>
                                 <ul class="list-unstyled">
                                     <%_ for (var linkIndex=0; linkIndex<footerSection.customFooterLinks.length; linkIndex++) {
@@ -32,9 +34,11 @@
                             </section>
                         <%_ } -%>
                     <%_ } else if (sectionIndex == 0) { /*For backward compatibility */ -%>
-                        <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-sectionName">
                             <%_ if (footerSection.sectionName != null) { -%>
-                                <h3 id="cdts-sectionName"><%= footerSection.sectionName %></h3>
+                                <section class="col-md-3 col-sm-6 col-lg-3" aria-labelledby="cdts-footerSection">
+                                <h3 id="cdts-footerSection"><%= footerSection.sectionName %></h3>
+                            <%_ } else { -%>
+                                <section class="col-md-3 col-sm-6 col-lg-3" aria-label="<^- msg('Footer') ^>">
                             <%_ } -%>
                             <ul class="list-unstyled">
                                 <%_ for (var linkIndex=0; linkIndex<pr.footerSections.length; linkIndex++) {
